sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: illegal start of simple expression
  while (c!=getNombreValeurs())){
                               ^